<resources>
    <string name="app_name">Hotel Bookings</string>

    <string name="has_not_an_account">Do not have an Account?</string>
    <string name="create_new_one">Create new one!</string>

    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>
    <string name="Book_the_room_now">Book the room now!</string>
    <string name="the_price">The price for a night:</string>
    <string name="days"> Days</string>
    <string name="daysNum">Number of days:</string>
    <string name="hotelName">Hotel Name</string>
    <string name="hotels">Hotels</string>
    <string name="signIn">SignIn</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="signUp">SignUp</string>
    <string name="clearAll">Clear All</string>
    <string name="user_name">Username:</string>
    <string name="email">Email</string>
    <string name="booking">Booking</string>
    <string name="myBookings">My Bookings</string>
    <string name="remaining">Remaining: </string>
    <string name="cancelBooking">Cancel booking</string>
    <string name="profile">Profile</string>
    <string name="mainPages">Main pages</string>
    <string name="profile_help_text">You can delete your account\nand edit your information her!</string>
    <string name="edit_ur_inf">Edit your info!</string>
    <string name="del_ur_acc">Delete your Account!</string>
    <string name="palestine_news">Palestine News!</string>
    <string name="urName">"Your name: "</string>
    <string name="urEmail">"Your email: "</string>
    <string name="urPhone">"Your phone: "</string>
    <string name="urPass">"Your password: "</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="about_Us">About us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="note">note!</string>
    <string name="cancel">Cancel</string>
    <string name="back">Close</string>
    <string name="about_Us_message">My name is 𝓑𝓪𝓻𝓪𝓪 𝓐 𝓐𝓫𝓾𝓐𝓵𝓻𝓸𝓫, I\'m a programmer and engineer, and work and life in palestine .\n\nMy phone number is 0566040930\nMy email addres is baraabualrub109@gmail.com\nMy name in LinkedIn is Baraa AbuAlrob\n\nyou can find my projects by this link:\nhttps://www.linkedin.com/in/baraa-abualrob-58230921b</string>
    <string name="booking_description">It accommodates four people, with a double bed and two single beds.\n\nOverlooking the Mediterranean Sea.\n\nIt receives continuous services throughout the day and an additional night.\n\nFIPER INTERNET IS UNINTERRUPTED.\n\nDistinctive air conditioning.\n\nAll essential kitchen tools with the latest styles.\n\nLock a door using your personal fingerprint. The fingerprint can hold 10 fingers.</string>
    <string name="news_text">The Commander-in-Chief of the Al-Qassam Brigades, Muhammad Al-Deif, announced in his speech, “the beginning of Operation Al-Aqsa Flood,” noting that “we have decided to put an end to the Israeli violations.”\n\n\nAl-Deif confirmed that \"the first strike of Operation Al-Aqsa Flood exceeded 5,000 missiles that targeted the enemy\'s positions, airports, and military fortifications,\" pointing out that \"starting from today, security coordination with the occupation will end.\n\nThe guest saw that \"today our people are regaining their revolution and returning to the project of establishing a state, and the Al-Aqsa flood is greater than the occupation thinks and believes,\" stressing that \"it is time for all Arab and Islamic forces to unite to sweep away the occupation.</string>
    <string name="imgCode">Image code...</string>
    <string name="youWillLossYourAcc">You will loss all your data and your account!</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="noDataFound">No data found!</string>
    <string name="checkingYourInternetConnection">Checking Your Internet Connection...</string>
    <string name="TBDS">The booking done successfully 🫡</string>
    <string name="BDS">Booked done successfully 🫡</string>
    <string name="bookingRoom">Booking Room</string>
    <string name="sorrySTGWrong">Sorry something goes wrong 😢</string>
    <string name="BookingFailed">Booking failed 😢</string>
    <string name="noNotifications">No notifications.</string>
    <string name="SSTGWPTA">Sorry something goes wrong! Try agan please.</string>
    <string name="deleteTheNotification">Delete the notification?</string>
    <string name="cancelBookingRoom">Cancellation of room booking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noDataYet">No data yet</string>
    <string name="choseFile">Chose file</string>
    <string name="tenant">Tenant</string>
    <string name="createNewHotel">Create new hotel</string>
    <string name="hotelOwner">Hotel Owner</string>
    <string name="chose">Chose</string>
    <string name="takePhoto">Take photo</string>
    <string name="loadPhoto">Load photo</string>
    <string name="userType">"User Type: "</string>
    <string name="location">The Location</string>
    <string name="noHotelsYet">No hotels yet!</string>
    <string name="create">Create</string>
    <string name="yourHotels">Your hotels</string>
    <string name="updateRoomInfo">Update Room Info?</string>
    <string name="deleteRoom">Delete Room?</string>
    <string name="description">Description:</string>
    <string name="deleteTheHotel">Delete the hotel!</string>
    <string name="deleteTheRoom">Delete the room!</string>
    <string name="choseOne">Chose one</string>
    <string name="theBookedRooms">Reserved rooms</string>
    <string name="date">Date:</string>
    <string name="userInfo">User info</string>
    <string name="customerInfo">Customer Info</string>
    <string name="call">Call</string>
    <string name="ifCDSCH">If the call has not started yet, click here.</string>

    <string-array name="userTypes">
        <item>Tenant</item>
        <item>Hotel owner</item>
    </string-array>

</resources>