<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/bot_hotels"
        android:icon="@drawable/hotel"
        android:title="@string/hotels"
        app:showAsAction="always" />

    <item
        android:id="@+id/bot_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/bot_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always" />


<!--    <item-->
<!--        android:id="@+id/bot_about_us"-->
<!--        android:icon="@drawable/ic_info"-->
<!--        android:title="About us" />-->

<!--    <item-->
<!--        android:id="@+id/bot_log_out"-->
<!--        android:icon="@drawable/ic_logout"-->
<!--        android:title="@string/logout" />-->


</menu>