<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_gravity="center|top"

    android:background="@drawable/bg_dialog" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center|top"
        android:layout_marginTop="1dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center|top"
            android:layout_marginTop="30dp"
            android:drawableEnd="@drawable/ic_edit"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/edit_ur_inf"
            android:textColor="@color/mainColorOrange"
            android:textSize="8pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,UseCompatTextViewDrawableXml,TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dia_usernameInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:paddingBottom="10dp"

            app:boxStrokeWidth="2dp"
            app:counterEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dia_emailInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingBottom="10dp"
            app:boxStrokeWidth="2dp"

            app:counterEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dia_phoneInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingBottom="10dp"
            app:boxStrokeWidth="2dp"

            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dia_passwordInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingBottom="10dp"
            app:boxStrokeWidth="2dp"
            app:counterEnabled="true"

            app:counterMaxLength="8"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="9"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/dia_cancel"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_marginEnd="10dp"

                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/mainColorOrange"
                android:textSize="7pt"
                android:textStyle="bold
"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"

                tools:ignore="TextSizeCheck,TextContrastCheck"
                tools:layout_editor_absoluteX="156dp"
                tools:layout_editor_absoluteY="342dp" />


            <Button
                android:id="@+id/dia_edit"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_marginStart="10dp"
                android:backgroundTint="@color/mainColorOrange"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="7pt"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck"
                tools:layout_editor_absoluteX="156dp"
                tools:layout_editor_absoluteY="342dp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>